# Module_27_7

./: CMakeLists.txt  README.md  chat.cpp  chat.h  logger.h  main.cpp  message.h  sha1.cpp  sql.cpp  sql.h  user.h
x64/Debug/: vc143.idb
x64/Debug/Module_27_7.tlog/: Module_27_7.lastbuildstate
